--- a/public/pepper_mp.html
+++ b/public/pepper_mp.html
@@ -66,7 +66,7 @@
     border:1px solid rgba(0,0,0,.12);background:#f6f8fb;font-weight:900;font-size:12px
   }
 
-.table{height:820px;border-radius:20px;background:#2f6b4f;box-shadow:0 16px 40px rgba(0,0,0,.25);position:relative;overflow:hidden;}
+.table{height:820px;border-radius:20px;background:#2f6b4f;box-shadow:0 16px 40px rgba(0,0,0,.25);position:relative;overflow:visible;}
 .seat{position:absolute;width:340px;text-align:center;color:#fff;}
 #p2{left:16px;top:50%;transform:translateY(-50%)}
 #p4{right:16px;top:50%;transform:translateY(-50%)}
@@ -168,30 +168,11 @@
 }
 
 /* Desktop baseline sizes (guardrail) */
-.table{ height: 720px; }
+.table{ height: 820px; }
 .card{ width: 78px; height: 112px; }
 .card img.cardImg{ width: 78px !important; height: auto !important; }
 .playSlot .mini .cardImg{ width: 140px; height: auto; }
 #lastTrickBox .cardImg{ width: 64px; height: auto; }
-
-/* Fan / arc hand */
-.hand.fan{
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  gap: 0;                 /* overlap a bit */
-  padding-bottom: 6px;
-}
-
-.hand.fan .card{
-  transform-origin: 50% 120%;   /* pivot below card for natural arc */
-  margin-left: -18px;           /* overlap amount (tweak) */
-}
-
-.hand.fan .card:first-child{
-  margin-left: 0;
-}
 
 /* =========================
    MOBILE FRIENDLY (v1)
