--- a/public/pepper_mp.html
+++ b/public/pepper_mp.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <style>
   body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,sans-serif;background:#e8eef6;color:#111;}
-  .wrap{max-width:1400px;margin:12px auto;padding:0 12px;display:grid;grid-template-columns:380px 1fr;gap:12px;align-items:start;}
+  .wrap{max-width:1240px;margin:12px auto;padding:0 12px;display:grid;grid-template-columns:380px 1fr;gap:12px;align-items:start;}
   .panel{background:#fff;border-radius:14px;padding:12px;box-shadow:0 10px 24px rgba(0,0,0,.12);}
   h2{margin:0 0 8px;font-size:16px}
   .muted{opacity:.72;font-size:13px}
@@ -52,7 +52,7 @@
   }
 
   /* Multiplayer bar */
-.mpBar{max-width:1400px;margin:10px auto 0;padding:0 12px;}
+  .mpBar{max-width:1240px;margin:10px auto 0;padding:0 12px;}
   .mpInner{
     background:#fff;border-radius:14px;padding:10px 12px;
     box-shadow:0 10px 24px rgba(0,0,0,.12);
@@ -66,10 +66,12 @@
     border:1px solid rgba(0,0,0,.12);background:#f6f8fb;font-weight:900;font-size:12px
   }
 
-.table{height:820px;border-radius:20px;background:#2f6b4f;box-shadow:0 16px 40px rgba(0,0,0,.25);position:relative;overflow:visible;}
-.seat{position:absolute;width:340px;text-align:center;color:#fff;}
-#p2{left:16px;top:50%;transform:translateY(-50%)}
-#p4{right:16px;top:50%;transform:translateY(-50%)}
+  .table{height:720px;border-radius:20px;background:#2f6b4f;box-shadow:0 16px 40px rgba(0,0,0,.25);position:relative;overflow:hidden;}
+  .seat{position:absolute;width:290px;text-align:center;color:#fff;}
+  #p1{bottom:8px;left:50%;transform:translateX(-50%)}
+  #p3{top:8px;left:50%;transform:translateX(-50%)}
+  #p2{left:8px;top:50%;transform:translateY(-50%)}
+  #p4{right:8px;top:50%;transform:translateY(-50%)}
 
   .name{font-weight:1000;font-size:16px}
   .chips{display:flex;justify-content:center;gap:8px;margin-top:6px;flex-wrap:wrap}
@@ -80,33 +82,7 @@
   .tag{margin-top:6px;display:inline-flex;padding:4px 10px;border-radius:999px;background:rgba(0,0,0,.35);border:1px solid rgba(255,255,255,.18);font-size:12px;font-weight:900}
   .tag.turn{background:rgba(255,215,0,.22);border-color:rgba(255,215,0,.55)}
 
-.hand{
-  display:flex;
-  justify-content:center;
-  gap:6px;
-  flex-wrap:wrap;
-  margin-top:10px;
-  min-height:102px;
-}
-
-/* Fan / arc hand */
-.hand.fan{
-  position: relative;
-  display: block;          /* ✅ stop flex layout for fan */
-  height: 140px;           /* ✅ gives room for arc */
-  padding-bottom: 6px;
-}
-
-.hand.fan .card{
-  position: absolute;      /* ✅ stack from same anchor, then JS offsets */
-  left: 50%;
-  bottom: 0;
-  transform-origin: 50% 120%;
-}
-
-.hand.fan .card:first-child{
-  margin-left: 0;
-}
+  .hand{display:flex;justify-content:center;gap:6px;flex-wrap:wrap;margin-top:10px;min-height:102px}
 
   /* Bigger cards in hands */
   .card{
@@ -131,7 +107,9 @@
     font-weight:1000;color:#fff;
   }
 
-   .trickRow{margin-top:10px;display:flex;justify-content:center;gap:10px;flex-wrap:wrap;min-height:130px}
+  .center{position:absolute;left:50%;top:50%;transform:translate(-50%,-50%);color:#fff;text-align:center;width:580px}
+  .centerLine{font-weight:1000;font-size:16px}
+  .trickRow{margin-top:10px;display:flex;justify-content:center;gap:10px;flex-wrap:wrap;min-height:130px}
   .playSlot{width:110px}
   .playSlot .who{font-size:12px;font-weight:1000;margin-bottom:4px}
   .playSlot .mini{
@@ -168,7 +146,7 @@
 }
 
 /* Desktop baseline sizes (guardrail) */
-.table{ height: 820px; }
+.table{ height: 720px; }
 .card{ width: 78px; height: 112px; }
 .card img.cardImg{ width: 78px !important; height: auto !important; }
 .playSlot .mini .cardImg{ width: 140px; height: auto; }
@@ -1334,6 +1312,16 @@ if (sb && G) {
     `</div>`;
 }
 
+  const cl = document.getElementById("centerLine");
+if (cl) cl.textContent = (G.phase==="BIDDING") ? "Bidding" :
+    (G.phase==="TRUMP_CHOICE") ? `Trump choice (${G.declarer})` :
+    (G.phase==="CHALLENGE_DECISION") ? "Challenge?" :
+    (G.phase==="ASSIST_OFFER") ? "Partner Assist?" :
+    (G.phase==="ASSIST_DISCARD_FIRST") ? "Declarer discard" :
+    (G.phase==="ASSIST_PARTNER_PASS") ? "Partner pass card" :
+    (G.phase==="PLAY") ? "Play" :
+    (G.phase==="GAME_OVER") ? "Game Over" : G.phase;
+
  const lt = G.lastTrick;
 const cs = document.getElementById("centerSub");
 if (cs) cs.innerHTML = `Dealer: <b>${G.dealer}</b> • Declarer: <b>${G.declarer||"—"}</b> • Trump: <b>${G.trump||"—"}</b>` +
@@ -1409,15 +1397,12 @@ let html = displayName;
     const handEl=document.getElementById(`hand-${s}`);
     handEl.innerHTML="";
 
-// Fan only the visible hand (recommended)
-const isMe = (MP.mySeat === s);
-const showFaces = (!MP.connected || !MP.roomCode) ? true : isMe;
-const hand = G.hands[s] || [];
+    const isMe = (MP.mySeat === s);
+    const showFaces = (!MP.connected || !MP.roomCode) ? true : isMe; // hide others in room
+    const hand=G.hands[s]||[];
 
-handEl.classList.toggle("fan", showFaces);
-
-if(!showFaces){
-  for(let i=0;i<hand.length;i++){
+    if(!showFaces){
+      for(let i=0;i<hand.length;i++){
         const b=document.createElement("div");
         b.className="back";
         b.textContent="🂠";
@@ -1435,36 +1420,11 @@ if (!UI_HAND_ORDER[s] || UI_HAND_ORDER[s].length !== hand.length) {
 
 // uiToReal maps the visible card index -> real index in G.hands[seat]
 const uiToReal = UI_HAND_ORDER[s].slice();
-const n = uiToReal.length;
-const maxAngle = 18; // degrees (tweak)
 
-uiToReal.forEach((realIdx, uiIdx) => {
+   uiToReal.forEach((realIdx, uiIdx) => {
   const c = hand[realIdx];
-
-  const div = document.createElement("div");
-  div.className = "card " + ((c.s==="H"||c.s==="D") ? "red" : "");
-  div.classList.add("fanCard"); // optional marker
-
-// ---- Fan layout (even angles, single row) ----
-if (handEl.classList.contains("fan")) {
-  const spread = 26;     // degrees across the whole hand (try 22–32)
-  const xStep  = 18;     // horizontal spacing per card (try 14–22)
-  const yLift  = 0;      // uniform lift for the whole hand (try 0 to 6)
-
-  const mid = (n - 1) / 2;
-  const t = (mid === 0) ? 0 : (uiIdx - mid) / mid; // -1..1
-
-  const ang = t * (spread / 2);
-  const x = (uiIdx - mid) * xStep;
-
-  // Center card on top (more natural and looks “even”)
-  const z = 1000 + Math.round(100 - Math.abs(uiIdx - mid) * 10);
-
-div.style.transform =
-  `translateX(-50%) translateX(${x}px) translateY(${-yLift}px) rotate(${ang}deg)`;
-  div.style.zIndex = String(z);
-}
-  // ---- end fan ----
+      const div=document.createElement("div");
+      div.className="card "+((c.s==="H"||c.s==="D")?"red":"");
 
       let clickable = canActAs(s);
 
