--- a/public/pepper_mp.html
+++ b/public/pepper_mp.html
@@ -207,6 +207,92 @@ body:not(.mpOpen) #mpInner{ display:none; }
     display: none !important;
   }
 
+/* =========================================================
+   Chat (ephemeral)
+   ========================================================= */
+const CHAT_LOG = []; // {ts, seat, name, text, system?}
+
+function chatStatusText(){
+  const el = document.getElementById("chatStatus");
+  if(!el) return;
+  const inRoom = (MP.connected && MP.roomCode);
+  el.textContent = inRoom ? "In room" : (MP.connected ? "Connected" : "Offline");
+}
+
+function formatTime(ts){
+  try{
+    const d = new Date(ts);
+    return d.toLocaleTimeString([], {hour:"2-digit", minute:"2-digit"});
+  }catch{
+    return "";
+  }
+}
+
+function renderChat(){
+  const box = document.getElementById("chatLog");
+  if(!box) return;
+
+  box.innerHTML = CHAT_LOG.map(m=>{
+    const when = m.ts ? formatTime(m.ts) : "";
+    const who = m.system
+      ? "System"
+      : `${(m.seat || "spec").toUpperCase()}${m.name ? " ("+escapeHtml(m.name)+")" : ""}`;
+
+    return `
+      <div class="chatMsg ${m.system ? "system" : ""}">
+        <div class="meta">${escapeHtml(who)} <span style="opacity:.55;font-weight:800">${escapeHtml(when)}</span></div>
+        <div>${escapeHtml(m.text || "")}</div>
+      </div>
+    `;
+  }).join("");
+
+  box.scrollTop = box.scrollHeight;
+}
+
+function escapeHtml(s){
+  return String(s||"")
+    .replaceAll("&","&amp;")
+    .replaceAll("<","&lt;")
+    .replaceAll(">","&gt;")
+    .replaceAll('"',"&quot;")
+    .replaceAll("'","&#039;");
+}
+
+function pushChatMessage(msg){
+  CHAT_LOG.push({
+    ts: msg.ts || Date.now(),
+    system: !!msg.system,
+    seat: msg.seat || "spec",
+    name: msg.name || "",
+    text: msg.text || ""
+  });
+  // keep last 80
+  if(CHAT_LOG.length > 80) CHAT_LOG.splice(0, CHAT_LOG.length - 80);
+  renderChat();
+}
+
+function sendChat(){
+  const inRoom = (MP.connected && MP.roomCode);
+  if(!inRoom) return alert("Connect and join a room to chat.");
+
+  const input = document.getElementById("chatInput");
+  if(!input) return;
+
+  const text = (input.value || "").trim();
+  if(!text) return;
+
+  // seat + name best-effort
+  const seat = MP.mySeat || "spec";
+  let name = "";
+  if(G && G.playerNames && MP.mySeat && ["p1","p2","p3","p4"].includes(MP.mySeat)){
+    name = G.playerNames[MP.mySeat] || "";
+  }
+
+  mpSend({ type:"CHAT", text, seat, name });
+  input.value = "";
+}
+
+
   /* Desktop baseline sizes (guardrail) */
   .table{ height: 720px; }
   .card{ width: 78px; height: 112px; }
@@ -617,9 +703,29 @@ body.actionsOpen #actionsPanelBody{
           </div>
 
           <div class="hr"></div>
-          <div id="actions"></div>
+<div id="actions"></div>
 
-          <div class="panel" id="logPanel" style="margin-top:12px">
+<!-- CHAT (ephemeral) -->
+<div class="panel" id="chatPanel" style="margin-top:12px">
+  <h2 style="display:flex;align-items:center;justify-content:space-between;gap:10px">
+    <span>Chat</span>
+    <span class="muted small" id="chatStatus">Offline</span>
+  </h2>
+
+  <div id="chatLog" class="chatLog"></div>
+
+  <div class="chatRow">
+    <input id="chatInput" class="input" placeholder="Type a message…" style="flex:1;min-width:0" />
+    <button class="btn primary" id="chatSend">Send</button>
+  </div>
+
+  <div class="muted small" style="margin-top:6px;opacity:.7">
+    Ephemeral room chat. Messages disappear when you refresh.
+  </div>
+</div>
+
+<div class="panel" id="logPanel" style="margin-top:12px">
+
             <h2>Log</h2>
             <div id="log" class="log"></div>
           </div>
@@ -794,6 +900,11 @@ function mpEnsureWS(){
       try{ dispatch(msg.action); }
       finally { MP.applyingRemote = false; }
       mpPublishState();
+      return;
+    }
+
+  if(msg.type==="CHAT"){
+      pushChatMessage(msg);
       return;
     }
 
@@ -1777,6 +1888,7 @@ Win: +${G.target}  Lose: ${G.lose}`;
 
   renderActions();
   renderInvariants();
+  chatStatusText();   // ✅ ADD THIS LINE
   mpUpdateControls();
 }
 
@@ -1964,6 +2076,21 @@ window.addEventListener("DOMContentLoaded", () => {
   }
 
   const btnSelfTest = document.getElementById("btnSelfTest");
+
+  // Chat wiring
+  const chatSend = document.getElementById("chatSend");
+  const chatInput = document.getElementById("chatInput");
+
+  if (chatSend) chatSend.onclick = sendChat;
+
+  if (chatInput) {
+    chatInput.addEventListener("keydown", (e) => {
+      if (e.key === "Enter") {
+        e.preventDefault();
+        sendChat();
+      }
+    });
+  }
 
   if (!btnNew) console.error("Missing #btnNew");
   if (!btnUndo) console.error("Missing #btnUndo");
