--- a/public/pepper_mp.html
+++ b/public/pepper_mp.html
@@ -273,7 +273,10 @@ function pushChatMessage(msg){
 
 function sendChat(){
   const inRoom = (MP.connected && MP.roomCode);
-  if(!inRoom) return alert("Connect and join a room to chat.");
+  if(!inRoom){
+    pushChatMessage({ system:true, ts:Date.now(), text:"Connect and join a room to chat." });
+    return;
+  }
 
   const input = document.getElementById("chatInput");
   if(!input) return;
@@ -818,7 +821,11 @@ function mpEnsureWS(){
   const wsUrl = wsProto + location.host + "/ws";
   MP.ws = new WebSocket(wsUrl);
 
-  MP.ws.onopen = ()=>{ MP.connected = true; mpRenderMeta(); };
+  MP.ws.onopen = ()=>{
+    MP.connected = true;
+    mpRenderMeta();
+    chatStatusText();
+  };
   MP.ws.onclose = ()=>{
     MP.connected = false;
     MP.roomCode = null;
@@ -827,6 +834,7 @@ function mpEnsureWS(){
     MP.mySeat = null;
     MP.seats = {p1:null,p2:null,p3:null,p4:null};
     mpRenderMeta();
+ chatStatusText();
   };
 
   MP.ws.onmessage = (e)=>{
@@ -845,7 +853,8 @@ function mpEnsureWS(){
       MP.isHost = (MP.clientId && MP.hostId && MP.clientId===MP.hostId);
       mpRenderMeta();
       if(MP.isHost && G) mpPublishState();
-      mpUpdateControls();
+  mpUpdateControls();
+      chatStatusText();
       return;
     }
     if(msg.type==="ROOM_JOINED"){
@@ -855,6 +864,7 @@ function mpEnsureWS(){
       MP.isHost = (MP.clientId && MP.hostId && MP.clientId===MP.hostId);
       mpRenderMeta();
       mpUpdateControls();
+      chatStatusText();
       return;
     }
 
@@ -2002,6 +2012,26 @@ function renderActions(){
 /* Buttons */
 window.addEventListener("DOMContentLoaded", () => {
   updateRotateHint();
+  // ---- Chat: hard-wire handlers (robust) ----
+  const chatSend = document.getElementById("chatSend");
+  const chatInput = document.getElementById("chatInput");
+
+  if (chatSend) {
+    chatSend.addEventListener("click", () => {
+      try { sendChat(); }
+      catch (e) { console.error("sendChat failed:", e); }
+    });
+  }
+
+  if (chatInput) {
+    chatInput.addEventListener("keydown", (e) => {
+      if (e.key === "Enter") {
+        e.preventDefault();
+        try { sendChat(); }
+        catch (err) { console.error("sendChat failed:", err); }
+      }
+    });
+  }
   window.addEventListener("resize", updateRotateHint);
   window.addEventListener("orientationchange", updateRotateHint);
 
